--- a/composer.json
+++ b/composer.json
@@ -6,10 +6,10 @@
     "type": "project",
     "require": {
         "php": ">=5.6.4",
-        "laracasts/flash": "^3.0",
         "laravel/framework": "5.4.*",
         "laravel/tinker": "~1.0",
-        "laravelcollective/html": "^5.4"
+        "laravelcollective/html": "^5.4",
+        "realrashid/sweet-alert": "^2.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
