--- a/composer.json
+++ b/composer.json
@@ -5,12 +5,13 @@
     "license": "MIT",
     "type": "project",
     "require": {
+        "php": ">=5.6.4",
         "barryvdh/laravel-dompdf": "0.8.2.*",
         "dompdf/dompdf": "^0.8.3",
-        "php": ">=5.6.4",
         "laravel/framework": "5.4.*",
         "laravel/tinker": "~1.0",
         "laravelcollective/html": "^5.4",
+        "nesbot/carbon": "1.39",
         "realrashid/sweet-alert": "^2.0"
     },
     "require-dev": {
