--- a/composer.json
+++ b/composer.json
@@ -5,19 +5,22 @@
     "license": "MIT",
     "type": "project",
     "require": {
-        "php": ">=5.6.4",
+        "php": ">=7.1.3",
         "barryvdh/laravel-dompdf": "0.8.2.*",
         "dompdf/dompdf": "^0.8.3",
-        "laravel/framework": "5.4.*",
+        "laravel/framework": "5.6.*",
         "laravel/tinker": "~1.0",
         "laravelcollective/html": "^5.4",
         "nesbot/carbon": "1.39",
-        "realrashid/sweet-alert": "^2.0"
+        "realrashid/sweet-alert": "^3.0",
+        "fideloper/proxy": "~4.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
-        "mockery/mockery": "0.9.*",
-        "phpunit/phpunit": "~5.7"
+        "mockery/mockery": "~1.0",
+        "phpunit/phpunit": "~7.0",
+        "filp/whoops": "~2.0",
+        "symfony/thanks": "^1.0"
     },
     "autoload": {
         "classmap": [
@@ -46,6 +49,10 @@
         "post-update-cmd": [
             "Illuminate\\Foundation\\ComposerScripts::postUpdate",
             "php artisan optimize"
+        ],
+        "post-autoload-dump": [
+            "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
+            "@php artisan package:discover"
         ]
     },
     "config": {
